# cppMiniPrograms

./: README.md  ToUpperLowerCase text converter.cpp
Brainy_Warrior/: .gitignore  CMakeLists.txt  README.md  board.cpp
Brainy_Warrior/include/: algorithms.h  brainy_warrior_tui.h  helper_functions.h  main.h
Brainy_Warrior/src/: CMakeLists.txt  conanfile.txt  levels.json  main.cpp
Brainy_Warrior/src/game_solver/: A_star_search.cpp  A_star_search.h  algorithm_helper.h  breadth_first_search.cpp  breadth_first_search.h  depth_first_search.cpp  depth_first_search.h  hill_climbing.cpp  hill_climbing.h  uniform_cost_search.cpp  uniform_cost_search.h
Brainy_Warrior/src/logic/: graph.cpp  helper_functions.cpp  helper_functions.h  moves.cpp  moves.h
Brainy_Warrior/src/structure/: board.cpp  board.h  node_state.cpp  node_state.h  tile.cpp  tile.h
Brainy_Warrior/src/tui/: brainy_warrior_tui.cpp  levels_tui.cpp  stats_tui.cpp
Graph/: README.md
Graph/BFS and DFS/: graph.cpp  graph.h  main.cpp
Graph/Breadth-First-Search/: graph.cpp  graph.h  main.cpp
UpperLower/: ToUpperLowerCase text converter.cpp
